# ligero-prover

./: .gitignore  AGENTS.md  CMakeLists.txt
emscripten_templates/: edit_distance.html
include/: transpiler.hpp
include/host_modules/: bn254fr.hpp
scripts/: run_note_spend_direct_bench.sh
sdk/cpp/include/ligetron/: bn254fr.h  bn254fr_class.h
sdk/cpp/src/: bn254fr.cpp
sdk/rust/: Cargo.toml
sdk/rust/src/: bn254fr.rs  bn254fr_native.rs  lib.rs  poseidon2.rs  poseidon2_constant.rs  poseidon2_native.rs
src/: webgpu_prover.cpp  webgpu_verifier.cpp
src/webgpu/: device_context.cpp
utils/circuits/bins/: note_deposit_guest.wasm  note_deposit_guest.wat  note_spend_guest.wasm  note_spend_guest.wat  value_validator_rust.wasm  value_validator_rust.wat
utils/circuits/bins/programs/: note_spend_guest.wasm
utils/circuits/ligero-private-args/: Cargo.toml  README.md
utils/circuits/ligero-private-args/src/: args.rs  config.rs  host.rs  lib.rs  proof.rs
utils/circuits/ligero-private-args/tests/: e2e_tests.rs  redaction_tests.rs
utils/circuits/note-deposit/: Cargo.toml  build.sh
utils/circuits/note-deposit/src/: main.rs
utils/circuits/note-spend/: Cargo.toml  README.md  build.sh
utils/circuits/note-spend-guest/: Cargo.toml  README.md  build.sh
utils/circuits/note-spend-guest/src/: main.rs
utils/circuits/note-spend-guest/tests/: guest_tests.rs
utils/circuits/note-spend/docs/: explanation_selective_privacy.md
utils/circuits/note-spend/src/: main.rs
utils/circuits/note-spend/tests/: guest_tests.rs
utils/circuits/rust-guest/: build.sh
utils/circuits/rust-guest/src/: lib.rs
utils/circuits/value-validator/: Cargo.toml  README.md  build.sh
utils/ligero-proof-package/: Cargo.toml
utils/ligero-webgpu-runner/: Cargo.toml  README.md
utils/ligero-webgpu-runner/docker/: Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  run.sh
utils/ligero-webgpu-runner/macos-service/: README.md  com.dcspark.ligero-http-server.plist  install-service.sh  run-forever.sh  uninstall-service.sh
utils/ligero-webgpu-runner/scripts/: test_prove_verify.sh
utils/ligero-webgpu-runner/src/: config.rs  daemon.rs  lib.rs  paths.rs  pool.rs  programs.rs  proof_package.rs  redaction.rs  runner.rs  sovereign_host.rs  verifier.rs
utils/ligero-webgpu-runner/tests/: e2e_test.rs  http_server_test.rs  note_deposit_roundtrip_test.rs  note_spend_bench.rs  note_spend_daemon_two_pass_bench_test.rs  note_spend_direct_two_pass_bench_test.rs  note_spend_failing_cases_test.rs  note_spend_old_args.rs  note_spend_roundtrip_test.rs  note_spend_v2_security_test.rs  redaction_test.rs
utils/portable-binaries/: build-portable-binaries.sh
utils/portable-binaries/build-portable-binaries/: README.md  linux-build-and-stage.sh  macos-build-and-stage.sh
utils/portable-binaries/linux-amd64/lib/: libboost_atomic.so.1.89.0  libboost_container.so.1.89.0  libboost_date_time.so.1.89.0  libboost_filesystem.so.1.83.0  libboost_iostreams.so.1.83.0  libboost_log.so.1.83.0  libboost_log_setup.so.1.89.0  libboost_prg_exec_monitor.so.1.89.0  libboost_random.so.1.89.0  libboost_regex.so.1.89.0  libboost_serialization.so.1.83.0  libboost_thread.so.1.83.0  libboost_thread.so.1.89.0  libboost_unit_test_framework.so.1.89.0  libgmpxx.so.4
utils/portable-binaries/linux-arm64/lib/: libboost_atomic.so.1.89.0  libboost_chrono.so.1.89.0  libboost_container.so.1.89.0  libboost_filesystem.so.1.83.0  libboost_filesystem.so.1.89.0  libboost_iostreams.so.1.83.0  libboost_log.so.1.83.0  libboost_log.so.1.89.0  libboost_log_setup.so.1.89.0  libboost_random.so.1.89.0  libboost_serialization.so.1.83.0  libboost_serialization.so.1.89.0  libboost_thread.so.1.83.0  libboost_thread.so.1.89.0  libboost_wserialization.so.1.89.0  libbz2.so.1.0  libgcc_s.so.1  libgmpxx.so.4  liblzma.so.5  libstdc++.so.6  libz.so.1  libzstd.so.1
utils/portable-binaries/macos-arm64/lib/: libboost_atomic.dylib  libboost_chrono.dylib  libboost_container.dylib  libboost_date_time.dylib  libboost_filesystem.dylib  libboost_iostreams.dylib  libboost_log.dylib  libboost_program_options.dylib  libboost_random.dylib  libboost_regex.dylib  libboost_serialization.dylib  libboost_thread.dylib  libgmp.10.dylib  libgmpxx.4.dylib  libicui18n.78.dylib  libicuuc.78.dylib  liblzma.5.dylib  libssl.3.dylib  libzstd.1.dylib
utils/portable-binaries/portable/: linux-build-and-stage.sh  macos-build-and-stage.sh
