[package]
name = "ligero-proof-package"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lightweight Ligero proof package (bincode) with JSON-based argument redaction"

[dependencies]
anyhow = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


