[package]
name = "ligero-runner"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust helper library to run Ligero webgpu_prover/webgpu_verifier binaries and manage proof artifacts"

[dependencies]
anyhow = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22.1"
ligetron = { path = "../../sdk/rust", features = ["native"] }
tiny_http = "0.12"

[dev-dependencies]
lazy_static = "1.4"
