[package]
name = "ligero-private-args"
version = "0.1.0"
edition = "2021"
description = "Utilities for handling private arguments in Ligero proofs"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"

[features]
default = []
