[package]
name = "note-spend-guest"
version = "0.1.0"
edition = "2021"

# Exclude from parent workspace
[workspace]

# Binary-only crate for WASM
[[bin]]
name = "note_spend_guest"
path = "src/main.rs"

[dependencies]
# Ligetron SDK for Poseidon2 via bn254fr host functions
ligetron = { path = "../../../sdk/rust", default-features = false }

[dev-dependencies]
anyhow = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
# Ligetron SDK with native field arithmetic for tests
ligetron = { path = "../../../sdk/rust", features = ["native"] }

[features]
native = []
# Enable detailed error codes for debugging. Adds ~10% overhead from extra branches.
# Disable in production for minimal constraint count.
diagnostics = []

[profile.release]
opt-level = "z"     # Optimize aggressively for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols
# Note: wasm-opt -Oz provides additional ~15% size reduction

