[package]
name = "value-validator-rust"
version = "0.1.0"
edition = "2021"

# Exclude from parent workspace
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# No dependencies needed for this simple example

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols

